sources/static/css/style.scss
html{
  height: 100%;
}
p{
  line-height: 2;
  margin-bottom: 1em;
    
  img {
    width: 100%;
    border-radius: 4px;
    display: block;
    margin: 3em 0;
    height: auto;
  }

  code{
      font-size: .95em;
      border-radius: 3px;
      -moz-border-radius: 3px;
      -webkit-border-radius: 3px;
      color: #222;
      background: #e8eff0;
      padding: 5px 5px;
  }
}
h1{
  &::before{
    content: "# ";
    color:#ff7e79;
    font-weight: 1000;
  }
}
h2{
  &::before{
    content: "## ";
    color:#ff7e79;
    font-weight: 1000;
  }
}

pre{
  margin: 0 0 10px;
  font-size: 15px;
  line-height: 1.42857;
  word-break: break-all;
  word-wrap: break-word;
  border-radius: 4px;
  white-space: pre-wrap;
  display: block;
  background: #f8f8f8;
  padding: 10px 20px;
  border: none;
  margin-bottom: 25px;
  color: #666;
  font-family: Courier, sans-serif;
  word-spacing: normal;
  word-break: normal;
  overflow-wrap: normal;
  overflow-y: hidden;
  code{
    border-radius: 4px;
    /* padding: 2px 4px; */
    font-size: 90%;
  }
}

hr {
  display: block;
  border: 0;
  margin: 2em auto;

  &:before {
    color: rgba(0, 0, 0, 0.2);
    font-size: 1.1em;
    display: block;
    content: "* * *";
    text-align: center;
  }
}

body{
  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
  min-height: 100%;
  display: flex;
  margin:0;
  flex-direction: column;
  header{
      display: flex;
      justify-content: center;
      border-bottom: 1px solid #eee;
      margin-bottom: 1em;
      .nav_area{
        padding: 1em 0;
        width: 50%;
        display: flex;
        align-items: center;
        justify-content: space-between;
        .logo{
          display: flex;
          justify-content: flex-start;
          a{  
              text-decoration: none;
              font-weight: 800;
              font-size: 15px;
              background-color: #3c546c;
              color: white;
              padding: 10px 30px;
              border-radius: 4px;
              letter-spacing: 1.5px;
          }
        }
        .menu_mobile{
          display: none;
        }
        .nav_bar{
          display: flex;
          justify-content: flex-end;
          ul{
            background-color: #ffffff;
            display: flex;
            border-radius: 6px;
            box-shadow: 0 0 9px 0 rgb(161 154 154 / 38%);
            font-size: 14px;
            padding: 0.6em 2em;
            li{
              display: flex;
              align-items: center;
              padding: 5px 15px;
              &:hover{
                border-radius: 6px;
                background-color: #f4f4f4;
              }
              a{
                padding: 0 0.2em;
                text-decoration: none;
                color: #2c3e50;
                display: flex;
                align-items: center;
                letter-spacing: 1px;
              }
            }
          }
          
        }
      }
  }

  
  .main_container{
    display: flex;
    justify-content: center;
    
    .main_area{
      width: 50%;
    }
    .main_content{
      margin: 1em 0;

      .articles,.post_area{
        .post{
          color: #3d3d3f;
          font-size: 16px;
          line-height: 1.7em;
          border-bottom: 2px dashed #eee;
          letter-spacing: 1px;
          margin-bottom: 3em;
          padding-bottom: 4em;
          
          .title_post{
            font-size: 28px;
            font-weight: 700;
            margin: 0.5em 0;
            letter-spacing: 1.6px;
            a{
              color: #353c5a;
              text-decoration: none;
              line-height: 1.5;

            }
          }
          .detail_post{
            display: flex;
            margin-bottom: 1em;
            flex-direction: column;
            color: #aaa;
            font-size: 12px;
            .categories{
              display: flex;
              justify-content: flex-start;
              ul{
                display: flex;
                align-items: center;
                padding: 0;
                margin: 0;
                li{
                  list-style: none;
                  padding-right: 5px;
                  a{
                    color: #aaa;
                    text-decoration: underline;
                  }
                }
              }
            }
          }
          
          
        }

      }

      .archive{
        li{
          list-style-type: none;
          display: flex;
          flex-direction: column;
          align-items: center;
          margin-bottom: 1.5em;
          .post_date{
            color: rgba(122, 122, 122, 0.6784313725);
            font-size: 14px;
            letter-spacing: 1.2px;
          }
          .post_title{
            font-size: 20px;
            padding: 0.3em 0;
            font-weight: bold;
            letter-spacing: 1.5px;
            text-decoration: none;
            color: #3273dc;
            text-align: center;
          }
        }
      }

      .tags-area,.categories-area{
        .header{
          margin-bottom: 2em;
          display: flex;
          justify-content: center;
          span{
            background-color: #3273dc;
            color: #fff;
            padding: 7px 15px;
            border-radius: 3px;
            font-size: 16px;
            text-decoration: none;
            font-weight: 700;
            letter-spacing: 1.5px;
          }
          
        }
        .categories,.tags{
          display: flex;
          flex-wrap: wrap;
          align-items: center;
          justify-content: center;
          
          .category,.tag{
            display: flex;
            font-size: 18px;
            font-weight: 700;
            word-break: break-word;
            margin: 5px 10px;
            align-items: flex-start;
            a{
              color: #437ddaf2;
              text-decoration: none;
            }
            .terms_count{
              color:#ff7e79;
              padding-left: 3px;
              font-size: 10px;
            }
          }
        }
      }

      .post_area{
        .header_post{
          border-left: 12px solid #ff7e79;
          margin-bottom: 3em;
          padding-left: 6em;
          .title_post{
            display: flex;
            justify-content: flex-end;
            a{
              text-align: right;
            }
          }
          .detail_post{
            display: flex;
            align-items: flex-end;
          }
          .tags_post{
            display: flex;
            ul{
              display: flex;
              margin: 0;
              padding: 0;
              align-items: center;
              li{
                display: flex;
                padding-right: 5px;
                a{
                  color: #aaa;
                }
              }
            }
          }
        }
        
      }
    }
  
  }
  footer{
    margin-top: auto;
    display: flex;
    justify-content: center;
    padding:2em 1em;
    font-size: 14px;
    a{
      text-decoration: none;
      color: rgb(0 0 0 / 92%);
    }
  }
  
}

.paginator{
  display: flex;
  margin: 1em 0;
  justify-content: center;
  align-items: center;
  a{
    padding: 8px 12px;
    color: #eee;
    background-color: #0d6efd;
    background-color: #495057;
    border-radius: 5px;
    margin: 0 4px;
    text-decoration: none;
  }
  .prev{
    background-color: #0d6efd;
    margin-right: 1em;
  }
  .next{
    background-color: #0d6efd;
    margin-left: 1em;
  }
  .page-number{
    padding: 8px 12px;
    color: #eee;
    background-color: #0d6efd;
    border-radius: 5px;
    margin: 0 4px;
  }
    
}

@media only screen and (max-width: 1200px) {
  body{
    .nav_area{
      flex-direction: column;
    }
  }
}

@media only screen and (max-width: 1000px) {
  body{
    header{
      .nav_area{
        display: flex;
        width: 80%;
        .logo{
          display: flex;
          justify-content: space-between;
          width: 100%;
          align-items: center;
          .menu_mobile{
            display: flex;
            padding: 10px;
            border-radius: 50%;
            cursor: pointer;
  
            .menu_icon{
              font-size: 26px;
            }     
          }
        }
        
        .nav_bar{
          display: none;
          width: 100%;
          ul{
            width: 100%;
            flex-direction: column;
            li{
              justify-content: center;
            }
          }
        }
        .show_nav_bar {
          display: flex;
        }
      }
    }
    .main_container{
      .main_area{
        width: 80%;
        .categories-area,.tags-area{
          .header{
            span{
              width: 100%;
              text-align: center;
            }
          }
          .categories,.tags{
            flex-direction: column;
          }
        }
        
      }
    }
  }

}

